# OFPlayground

./: .gitignore  README.md  pyproject.toml  run_dragonshells.sh  run_lazarus.sh  run_opus.sh  run_orchestrator.sh
.claude/: settings.local.json
docs/: README.md  agents.md  architecture.md  cli.md  configuration.md  floor-policies.md  ofp-protocol.md  orchestration.md  output.md
docs/blogs/: intro.md
docs/superpowers/plans/: 2026-03-27-coding-agent.md
docs/superpowers/specs/: 2026-03-27-coding-agent-design.md
examples/: claude_floor.sh  cosmos_floor.sh  free_for_all_brainstorm.sh  google_floor.sh  moderated_investment_committee.sh  research_panel_web.sh  round_robin_novel.sh  sequential_code_review.sh  showcase.sh  showcase_web.sh  simple_chat.py
src/ofp_playground/: __main__.py  cli.py
src/ofp_playground/agents/: __init__.py  base.py  human.py  registry.py  remote.py  web_human.py
src/ofp_playground/agents/llm/: __init__.py  anthropic.py  anthropic_vision.py  base.py  classifier.py  codex.py  detector.py  google.py  (+20 more)
src/ofp_playground/bus/: __init__.py  message_bus.py
src/ofp_playground/config/: output.py  settings.py
src/ofp_playground/floor/: __init__.py  breakout.py  breakout_tools.py  history.py  manager.py  policy.py
src/ofp_playground/memory/: __init__.py  store.py  tools.py
src/ofp_playground/models/: artifact.py
src/ofp_playground/renderer/: __init__.py  gradio_ui.py  terminal.py
tests/: test_agents.py  test_breakout.py  test_coding_agent.py  test_floor_manager.py  test_floor_manager_extended.py  test_memory.py  test_message_bus.py
