[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofplayground"
version = "0.1.0"
description = "CLI tool for Open Floor Protocol multi-agent conversations"
authors = [{ name = "BladeSzaSza" }]
readme = "README.md"
homepage = "https://github.com/bladeszasza/OFPlayground"
repository = "https://github.com/bladeszasza/OFPlayground"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "openfloor @ git+https://github.com/open-voice-interoperability/openfloor-python.git",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "anthropic>=0.40",
    "openai>=1.0",
    "google-genai>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "pydantic>=2.0",
    "huggingface_hub>=0.23",
    "gradio>=4.0",
]

[project.urls]
Homepage = "https://github.com/bladeszasza/OFPlaygorund"
Repository = "https://github.com/bladeszasza/OFPlaygorund"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
ofp-playground = "ofp_playground.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
